# TestPresentationNLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: article9_terms.csv  article9_whitelist.csv  forbidden_words.csv  generic_detection_rules.csv  sections.csv  spacy_synonyms.csv  test_cases.csv
notebooks/: 01_lancer_traitement.ipynb  02_analyser_resultats_scores.ipynb  03_tester_performance_detection.ipynb  03a_tester_branche_generic.ipynb  03b_tester_branche_spacy.ipynb  03c_tester_branche_gliner.ipynb  03d_tester_branche_presidio.ipynb  03e_tester_comparaison_branches.ipynb  analysis_workflow_example.ipynb
outputs/specifications/: specification_detection_conformite_product_owner.docx
scripts/: generate_po_spec_docx.py  run_analysis.py
src/compliance_nlp/: __init__.py  article9.py  config.py  generic.py  gliner_detector.py  linguistic.py  models.py  notebook.py  pdf.py  pipeline.py  regex_detector.py  rules.py  text_utils.py
templates/: adhesion_emilie_bernard_conseil_non_professionnel.html  adhesion_julien_martin.html  adhesion_laurent_moreau_capacite_inadaptee.html  adhesion_nadia_benali.html  adhesion_patrice_leroy_clause_beneficiaire_imprecise.html  adhesion_sandrine_roche_formule_par_defaut_fautes.html  modele_souscription_assurance_vie.html  souscriptions_assurance_vie_remplies.html
tests/: test_article9.py  test_generic_detection.py  test_rules.py
